--- a/coffin/src/App.module.css
+++ b/coffin/src/App.module.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
-  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.container {
+  flex-grow: 1;
 }
 
 
