--- a/coffin/src/container/ProductOverviews/ProductOverview/ProductOverview.module.css
+++ b/coffin/src/container/ProductOverviews/ProductOverview/ProductOverview.module.css
@@ -7,6 +7,10 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
+.Spinner {
+    width: 75vw;
+}
+
 @media (max-width: 414px) {
     .cardContainer {
         grid-template-columns: repeat(1, 1fr);
